Deployments/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zeka-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api-local.zeka.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zekaocelotgw
                port:
                  number: 80
